added 1 and 2 from A3